--- a/templates/template.html
+++ b/templates/template.html
@@ -49,7 +49,7 @@
                         Login
                     </button>
                     <div aria-labelledby="dropdownMenuButton" class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="./login">Login</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Another action</a>
                         <a class="dropdown-item" href="#">Something else here</a>
@@ -60,11 +60,8 @@
     </div>
 </nav>
 <!--NavBarEnd-->
-<div class="personal_info"></div>
-<div class="projects"></div>
-<div class="contact"></div>
-<div class="footer"></div>
-
+{% block content %}
+{% endblock %}
 <!--Scripts-->
 <script crossorigin="anonymous"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
