--- a/templates/template.html
+++ b/templates/template.html
@@ -2,85 +2,76 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" rel="stylesheet">
+    <title>{% block title %}{% endblock %}</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="{{ url_for("static", filename="bulma.css") }}" rel="stylesheet">
+{#    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>#}
 </head>
 <body>
 <!--NavBarStart-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-            class="navbar-toggler"
-            data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<nav aria-label="main navigation" class="navbar" role="navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+            <img height="28" src="https://bulma.io/images/bulma-logo.png" width="112">
+        </a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown"
-                   href="#"
-                   id="navbarDropdown" role="button">
-                    Dropdown
+        <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="navbarBasicExample"
+           role="button">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+
+    <div class="navbar-menu" id="navbarBasicExample">
+        <div class="navbar-start">
+            <a class="navbar-item">
+                Home
+            </a>
+
+            <div class="navbar-item has-dropdown">
+                <a class="navbar-link">
+                    More
                 </a>
-                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+
+                <div class="navbar-dropdown">
+                    <a class="navbar-item">
+                        About
+                    </a>
+                    <a class="navbar-item">
+                        Jobs
+                    </a>
+                    <a class="navbar-item">
+                        Contact
+                    </a>
+                    <hr class="navbar-divider">
+                    <a class="navbar-item">
+                        Report an issue
+                    </a>
                 </div>
-            </li>
-            <li class="nav-item">
-                <a aria-disabled="true" class="nav-link disabled" href="#" tabindex="-1">Disabled</a>
-            </li>
-        </ul>
-        <ul class="nav my-2 my-lg-0">
-            <li class="nav-item">
-                <div class="dropdown">
-                    <button aria-expanded="false" aria-haspopup="true" class="btn btn-secondary dropdown-toggle"
-                            data-toggle="dropdown" id="dropdownMenuButton" type="button">
-                        Login
-                    </button>
-                    <div aria-labelledby="dropdownMenuButton" class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="/login">Login</a>
-                        <a class="dropdown-item" href="/logout">Logout</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/register">Register</a>
-                    </div>
+            </div>
+        </div>
+
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <div class="buttons">
+                    <a class="button is-primary" href="/register">
+                        <strong>Sign up</strong>
+                    </a>
+                    <a class="button is-light" href="/login">
+                        Log in
+                    </a>
                 </div>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
 </nav>
 <!--NavBarEnd-->
-{% with messages = get_flashed_messages(with_categories=true) %}
-{% if messages %}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-    You have been logged in successfully.
-    <button aria-label="Close" class="close" data-dismiss="alert" type="button">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-{% endif %}
-{% endwith %}
 {% block content %}
 {% endblock %}
 <!--Scripts-->
-<script crossorigin="anonymous"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="/static/jquery.min.js"></script>
+<script src="/static/scripts.js"></script>
+{#<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>#}
 </body>
 </html>
